--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 click==8.1.3
+Flask==2.2.3
+gunicorn==20.1.0
+importlib-metadata==6.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
 joblib==1.2.0
+MarkupSafe==2.1.2
 nltk==3.8.1
 pickle5==0.0.11
 regex==2022.10.31
 tqdm==4.64.1
+Werkzeug==2.2.3
+zipp==3.15.0
