--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,14 @@ Jinja2==3.1.2
 joblib==1.2.0
 MarkupSafe==2.1.2
 nltk==3.8.1
+numpy==1.24.2
+pandas==2.0.0
 pickle5==0.0.11
+python-dateutil==2.8.2
+pytz==2023.3
 regex==2022.10.31
+six==1.16.0
 tqdm==4.64.1
+tzdata==2023.3
 Werkzeug==2.2.3
 zipp==3.15.0
